[package]
name = "re-signora-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "src/server",
    "src/hello"
]

[dependencies]
server = { path = "src/server" }
hello = { path = "src/hello" }
actix-web = "4.0.0-beta.9"